[tool.poetry]
name = "scei-graph"
version = "0.1.0"
description = ""
authors = ["Corentin Duchêne <corentin.duchene@epita.fr>"]

[tool.poetry.dependencies]
python = "3.9.5"
jupyter = "^1.0.0"
plotly = "^5.6.0"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
seaborn = "^0.11.2"
pandas = "^1.4.1"
numpy = "^1.22.3"
requests = "^2.27.1"
tqdm = "^4.63.0"
dash = "^2.3.0"
Flask = "^2.0.3"
folium = "^0.12.1"
dash-bootstrap-components = "^1.1.0"
click = "8.0.2"
statsmodels = "^0.13.2"
pgeocode = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
